# db-inspector-mcp

./: .env.example  .gitignore  AGENTS.md  Access-SQL-MCP-Improvements.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agents.mdc  testing.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.obsidian/: workspace.json
benchmarks/: bench_com_levels.py  bench_connection.py  bench_dao_vs_odbc.py  bench_detailed.py  bench_msysobjects.py
docs/: CURSOR_SHARED_MCP.md
src/db_inspector_mcp/: .env.example  __init__.py  config.py  init.py  main.py  readonly.py  resolution_logging.py  security.py  server_runtime.py  tools.py  usage_logging.py  workspace.py
src/db_inspector_mcp/backends/: __init__.py  _odbc_worker.py  access.py  access_com.py  access_odbc.py  base.py  mssql.py  postgres.py  registry.py  sql_utils.py
tests/: __init__.py  conftest.py  debug_com_cleanup.py  debug_com_pytest.py  test_backends.py  test_config.py  test_init.py  test_logging.py  test_readonly.py  test_registry_hints.py  test_resolution_logging.py  test_security.py  test_server_runtime.py  test_sql_utils.py  test_tools.py  test_tools_contract.py  test_version.py  test_workspace.py
