[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-inspector-mcp"
version = "0.1.0"
description = "A lightweight, extensible, cross-database MCP server for database introspection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adam Waller"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/joyfullservice/db-inspector-mcp"
Repository = "https://github.com/joyfullservice/db-inspector-mcp"
Issues = "https://github.com/joyfullservice/db-inspector-mcp/issues"

dependencies = [
    "mcp[cli]>=1.0.0",
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
db-inspector-mcp = "db_inspector_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
db_inspector_mcp = [".env.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (require Access installed)",
]

